force-app/main/default/objects/AccountAssessment__c/fields/gaihin_meter__c.field-meta.xml
<CustomField>
    <fullName>gaihin_meter__c</fullName>
    <label>外品メーター</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>