force-app/main/default/objects/AccountAssessment__c/fields/gojitu_okurihin_other__c.field-meta.xml
<CustomField>
    <fullName>gojitu_okurihin_other__c</fullName>
    <label>後日送り品その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>