force-app/main/default/objects/AccountAssessment__c/fields/hanamaru_responsible__c.field-meta.xml
<CustomField>
    <fullName>hanamaru_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>はなまる担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountAssessment</relationshipName>
    <type>Lookup</type>
</CustomField>