force-app/main/default/objects/AccountAssessment__c/fields/handle__c.field-meta.xml
<CustomField>
    <fullName>handle__c</fullName>
    <label>ハンドル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>左</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>右</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>