force-app/main/default/objects/AccountAssessment__c/fields/import_kbn__c.field-meta.xml
<CustomField>
    <fullName>import_kbn__c</fullName>
    <label>輸入区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>D</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>並行</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>