force-app/main/default/objects/AccountAssessment__c/fields/inner_dust__c.field-meta.xml
<CustomField>
    <fullName>inner_dust__c</fullName>
    <label>室内ゴミ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>