force-app/main/default/objects/AccountAssessment__c/fields/Inquiry_No__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_No__c</fullName>
    <label>問合せ番号</label>
    <length>7</length>
    <type>Text</type>
</CustomField>