force-app/main/default/objects/AccountAssessment__c/fields/iraimotochukoshabu__c.field-meta.xml
<CustomField>
    <fullName>iraimotochukoshabu__c</fullName>
    <formula>Owner:User.Contact.Account.CommunityTopBusinessAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>依頼元中古車部</label>
    <type>Text</type>
</CustomField>