force-app/main/default/objects/AccountAssessment__c/fields/jiso__c.field-meta.xml
<CustomField>
    <fullName>jiso__c</fullName>
    <label>自走</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>可</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>少し可</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>不可（転がる）</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>不可（転がらない）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>