force-app/main/default/objects/AccountAssessment__c/fields/json_shakensho_api__c.field-meta.xml
<CustomField>
    <fullName>json_shakensho_api__c</fullName>
    <label>車検証データ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>