force-app/main/default/objects/AccountAssessment__c/fields/katasiki_sitei_no__c.field-meta.xml
<CustomField>
    <fullName>katasiki_sitei_no__c</fullName>
    <label>型式指定番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>