force-app/main/default/objects/AccountAssessment__c/fields/kudo__c.field-meta.xml
<CustomField>
    <fullName>kudo__c</fullName>
    <label>駆動</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>未選択</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>2WD</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>4WD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>