force-app/main/default/objects/AccountAssessment__c/fields/left_back_url__c.field-meta.xml
<CustomField>
    <fullName>left_back_url__c</fullName>
    <label>左後ろURL</label>
    <type>Url</type>
</CustomField>