force-app/main/default/objects/AccountAssessment__c/fields/left_front_url__c.field-meta.xml
<CustomField>
    <fullName>left_front_url__c</fullName>
    <label>左前URL</label>
    <type>Url</type>
</CustomField>