force-app/main/default/objects/AccountAssessment__c/fields/listing_request_date__c.field-meta.xml
<CustomField>
    <fullName>listing_request_date__c</fullName>
    <label>出品依頼日</label>
    <type>Date</type>
</CustomField>