force-app/main/default/objects/AccountAssessment__c/fields/LotNo_yard__c.field-meta.xml
<CustomField>
    <fullName>LotNo_yard__c</fullName>
    <label>ロットNo（ヤード査定表）</label>
    <length>7</length>
    <type>Text</type>
</CustomField>