force-app/main/default/objects/AccountAssessment__c/fields/meter_disp__c.field-meta.xml
<CustomField>
    <fullName>meter_disp__c</fullName>
    <label>メーター表示</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>表示せず</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>メーター改ざん</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>メーター交換</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>走行不明</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>