force-app/main/default/objects/AccountAssessment__c/fields/meter_url__c.field-meta.xml
<CustomField>
    <fullName>meter_url__c</fullName>
    <label>メーターURL</label>
    <type>Url</type>
</CustomField>