force-app/main/default/objects/AccountAssessment__c/fields/NegotiationRemarks__c.field-meta.xml
<CustomField>
    <fullName>NegotiationRemarks__c</fullName>
    <label>商談備考</label>
    <type>TextArea</type>
</CustomField>