force-app/main/default/objects/AccountAssessment__c/fields/okiba_select__c.field-meta.xml
<CustomField>
    <fullName>okiba_select__c</fullName>
    <label>置場</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>---</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>神戸集中ヤード</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>福岡ヤード</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>名古屋ヤード</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>名古屋第二ヤード</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>神奈川ヤード</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>首都圏ヤード</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>仙台ヤード</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>鳥取ヤード</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>広島ヤード</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>金沢ヤード</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>栃木ヤード</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>静岡ヤード</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>南九州ヤード</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>新潟ヤード</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>北海道ヤード</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>長野ヤード</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>岩手ヤード</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>四国ヤード</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>岡山ヤード</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>千葉ヤード</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>神戸第二ヤード</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>水戸ヤード</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>山口ヤード</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>沖縄ヤード</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>