force-app/main/default/objects/AccountAssessment__c/fields/one_owner_kakunin__c.field-meta.xml
<CustomField>
    <fullName>one_owner_kakunin__c</fullName>
    <label>ワンオーナー確認</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>〇</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>×</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>