force-app/main/default/objects/AccountAssessment__c/fields/oppotunity__c.field-meta.xml
<CustomField>
    <fullName>oppotunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>account_assessments_opps</relationshipName>
    <type>Lookup</type>
</CustomField>