force-app/main/default/objects/AccountAssessment__c/fields/other_details__c.field-meta.xml
<CustomField>
    <fullName>other_details__c</fullName>
    <inlineHelpText>買取条件が「その他」の場合のみ入力可能。解体条件など。</inlineHelpText>
    <label>その他詳細【はなまるが入力】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>