force-app/main/default/objects/AccountAssessment__c/fields/other_url_04__c.field-meta.xml
<CustomField>
    <fullName>other_url_04__c</fullName>
    <label>その他URL4</label>
    <type>Url</type>
</CustomField>