force-app/main/default/objects/AccountAssessment__c/fields/other_url_05__c.field-meta.xml
<CustomField>
    <fullName>other_url_05__c</fullName>
    <label>その他URL5</label>
    <type>Url</type>
</CustomField>