force-app/main/default/objects/AccountAssessment__c/fields/other_url_06__c.field-meta.xml
<CustomField>
    <fullName>other_url_06__c</fullName>
    <label>その他URL6</label>
    <type>Url</type>
</CustomField>