force-app/main/default/objects/AccountAssessment__c/fields/owner_regisit_no__c.field-meta.xml
<CustomField>
    <fullName>owner_regisit_no__c</fullName>
    <label>名義変更時登録No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>