force-app/main/default/objects/AccountAssessment__c/fields/owner_right__c.field-meta.xml
<CustomField>
    <fullName>owner_right__c</fullName>
    <label>所有権</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>