force-app/main/default/objects/AccountAssessment__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Amount_content__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>査定依頼中</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>結果回答待ち</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>キャンセル</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>引取依頼待ち</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>引取完了待ち</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>引取完了</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>出品依頼待ち</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>オークション売却待ち</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>書類到着待ち</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>書類到着済</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>全完了</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>