force-app/main/default/objects/AccountAssessment__c/fields/point__c.field-meta.xml
<CustomField>
    <fullName>point__c</fullName>
    <label>評価点</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>