force-app/main/default/objects/AccountAssessment__c/fields/postAuctionErrReason__c.field-meta.xml
<CustomField>
    <fullName>postAuctionErrReason__c</fullName>
    <label>オークション連携エラー理由</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>