force-app/main/default/objects/AccountAssessment__c/fields/recycle_cost__c.field-meta.xml
<CustomField>
    <fullName>recycle_cost__c</fullName>
    <label>リサイクル料金【はなまるが入力】</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>