force-app/main/default/objects/AccountAssessment__c/fields/registerdAtYear__c.field-meta.xml
<CustomField>
    <fullName>registerdAtYear__c</fullName>
    <label>初年度登録（年）</label>
    <length>4</length>
    <type>Text</type>
</CustomField>