force-app/main/default/objects/AccountAssessment__c/fields/registration_number__c.field-meta.xml
<CustomField>
    <fullName>registration_number__c</fullName>
    <label>登録番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>