force-app/main/default/objects/AccountAssessment__c/fields/requesting_company_name__c.field-meta.xml
<CustomField>
    <fullName>requesting_company_name__c</fullName>
    <formula>asses_tanto__r.contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>依頼元会社名</label>
    <type>Text</type>
</CustomField>