force-app/main/default/objects/AccountAssessment__c/fields/reserve1__c.field-meta.xml
<CustomField>
    <fullName>reserve1__c</fullName>
    <label>保証書</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>未選択</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>無</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>有</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>