force-app/main/default/objects/AccountAssessment__c/fields/result__c.field-meta.xml
<CustomField>
    <fullName>result__c</fullName>
    <label>結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>成約</fullName>
            </value>
            <value>
                <fullName>不成約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>