force-app/main/default/objects/AccountAssessment__c/fields/room_url__c.field-meta.xml
<CustomField>
    <fullName>room_url__c</fullName>
    <label>室内URL</label>
    <type>Url</type>
</CustomField>