force-app/main/default/objects/AccountAssessment__c/fields/rui_kbn_no__c.field-meta.xml
<CustomField>
    <fullName>rui_kbn_no__c</fullName>
    <label>類別区分番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>