force-app/main/default/objects/AccountAssessment__c/fields/scheduled_collection_date__c.field-meta.xml
<CustomField>
    <fullName>scheduled_collection_date__c</fullName>
    <label>引取予定日【はなまるが入力】</label>
    <type>Date</type>
</CustomField>