force-app/main/default/objects/AccountAssessment__c/fields/seibi_techo_umu__c.field-meta.xml
<CustomField>
    <fullName>seibi_techo_umu__c</fullName>
    <label>整備手帳有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>