force-app/main/default/objects/AccountAssessment__c/fields/seizo_getu__c.field-meta.xml
<CustomField>
    <fullName>seizo_getu__c</fullName>
    <label>アナタコ製造年式（月）</label>
    <length>2</length>
    <type>Text</type>
</CustomField>