force-app/main/default/objects/AccountAssessment__c/fields/seizo_nensiki__c.field-meta.xml
<CustomField>
    <fullName>seizo_nensiki__c</fullName>
    <label>車両製造年（西暦年）</label>
    <length>4</length>
    <type>Text</type>
</CustomField>