force-app/main/default/objects/AccountAssessment__c/fields/SendDateToAuctionSite__c.field-meta.xml
<CustomField>
    <fullName>SendDateToAuctionSite__c</fullName>
    <label>オークションサイトへの送信日時</label>
    <type>DateTime</type>
</CustomField>