force-app/main/default/objects/AccountAssessment__c/fields/serial_no__c.field-meta.xml
<CustomField>
    <fullName>serial_no__c</fullName>
    <label>シリアルNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>