force-app/main/default/objects/AccountAssessment__c/fields/shadai_no__c.field-meta.xml
<CustomField>
    <fullName>shadai_no__c</fullName>
    <label>車台番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>