force-app/main/default/objects/AccountAssessment__c/fields/shaken_date_1__c.field-meta.xml
<CustomField>
    <fullName>shaken_date_1__c</fullName>
    <label>車検日１</label>
    <type>Date</type>
</CustomField>