force-app/main/default/objects/AccountAssessment__c/fields/shaken_date_3__c.field-meta.xml
<CustomField>
    <fullName>shaken_date_3__c</fullName>
    <label>車検日３</label>
    <type>Date</type>
</CustomField>