force-app/main/default/objects/AccountAssessment__c/fields/shaken_getu__c.field-meta.xml
<CustomField>
    <fullName>shaken_getu__c</fullName>
    <label>車検付き月</label>
    <length>2</length>
    <type>Text</type>
</CustomField>