force-app/main/default/objects/AccountAssessment__c/fields/shaken_inf__c.field-meta.xml
<CustomField>
    <fullName>shaken_inf__c</fullName>
    <label>車検情報</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>空白</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>抹消</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>車検付き</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>確認中</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>書類なし</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>