force-app/main/default/objects/AccountAssessment__c/fields/shaken_run_dist_1__c.field-meta.xml
<CustomField>
    <fullName>shaken_run_dist_1__c</fullName>
    <label>車検証の走行距離１</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>