force-app/main/default/objects/AccountAssessment__c/fields/shanai_tumikomi_parts__c.field-meta.xml
<CustomField>
    <fullName>shanai_tumikomi_parts__c</fullName>
    <label>社内積込パーツ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>