force-app/main/default/objects/AccountAssessment__c/fields/shift__c.field-meta.xml
<CustomField>
    <fullName>shift__c</fullName>
    <label>シフト</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>AT</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>MT4</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>MT5</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>MT6</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>MT7</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>MT8</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>