force-app/main/default/objects/AccountAssessment__c/fields/sobi_ac__c.field-meta.xml
<CustomField>
    <fullName>sobi_ac__c</fullName>
    <label>A/C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>有</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>無</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>未選択</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>