force-app/main/default/objects/AccountAssessment__c/fields/sobi_navi_select__c.field-meta.xml
<CustomField>
    <fullName>sobi_navi_select__c</fullName>
    <label>ナビ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>未選択</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>無</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>有</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>