force-app/main/default/objects/AccountAssessment__c/fields/sobi_pawer_slide_door_left__c.field-meta.xml
<CustomField>
    <fullName>sobi_pawer_slide_door_left__c</fullName>
    <label>パワースライドドア左</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>