force-app/main/default/objects/AccountAssessment__c/fields/sobi_seat__c.field-meta.xml
<CustomField>
    <fullName>sobi_seat__c</fullName>
    <label>シート</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>未選択</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>レザー</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>ハーフレザー</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>アルカンターラ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>