force-app/main/default/objects/AccountAssessment__c/fields/steering_url__c.field-meta.xml
<CustomField>
    <fullName>steering_url__c</fullName>
    <label>ステアリングURL</label>
    <type>Url</type>
</CustomField>