force-app/main/default/objects/AccountAssessment__c/fields/StorageLocation__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation__c</fullName>
    <label>保管先名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>