force-app/main/default/objects/AccountAssessment__c/fields/StorageLocationPerson__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationPerson__c</fullName>
    <label>保管先担当者</label>
    <length>50</length>
    <type>Text</type>
</CustomField>