force-app/main/default/objects/AccountAssessment__c/fields/StorageLocationTell__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationTell__c</fullName>
    <label>保管先連絡先</label>
    <length>50</length>
    <type>Text</type>
</CustomField>