force-app/main/default/objects/AccountAssessment__c/fields/store__c.field-meta.xml
<CustomField>
    <fullName>store__c</fullName>
    <label>依頼元担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>