force-app/main/default/objects/AccountAssessment__c/fields/sv_sync_date__c.field-meta.xml
<CustomField>
    <fullName>sv_sync_date__c</fullName>
    <label>サーバ同期日時</label>
    <type>DateTime</type>
</CustomField>