force-app/main/default/objects/AccountAssessment__c/fields/switch1_url__c.field-meta.xml
<CustomField>
    <fullName>switch1_url__c</fullName>
    <label>スイッチ類①URL</label>
    <type>Url</type>
</CustomField>