force-app/main/default/objects/AccountAssessment__c/fields/switch2_url__c.field-meta.xml
<CustomField>
    <fullName>switch2_url__c</fullName>
    <label>スイッチ類②URL</label>
    <type>Url</type>
</CustomField>