force-app/main/default/objects/AccountAssessment__c/fields/the_highest_bid__c.field-meta.xml
<CustomField>
    <fullName>the_highest_bid__c</fullName>
    <label>オークション落札金額【はなまるが入力】</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>