force-app/main/default/objects/AccountAssessment__c/fields/tokki__c.field-meta.xml
<CustomField>
    <fullName>tokki__c</fullName>
    <label>特記事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>