force-app/main/default/objects/AccountAssessment__c/fields/tokki_check_rump__c.field-meta.xml
<CustomField>
    <fullName>tokki_check_rump__c</fullName>
    <label>特記事項（チェックランプ）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>29</fullName>
                <label>エアバックチェックランプ点灯</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>エンジンチェックランプ点灯</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>ABSチェックランプ点灯</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>チェックランプ点灯</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>