force-app/main/default/objects/AccountAssessment__c/fields/tokki_engine__c.field-meta.xml
<CustomField>
    <fullName>tokki_engine__c</fullName>
    <label>特記事項（エンジン）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>21</fullName>
                <label>エンジンブロック割れ</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>エンジンルーム内より異音</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>エンジンより異音</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>アイドリング不安定</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>エンジンかかるがすぐ止まる</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>エンジンかかるが吹けあがる</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>エンジンマウント割れ</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>エンジンルーム内ばらしあり</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>