force-app/main/default/objects/AccountAssessment__c/fields/tokki_inner__c.field-meta.xml
<CustomField>
    <fullName>tokki_inner__c</fullName>
    <label>特記事項（内装）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
                <label>室内ばらし</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>室内汚れあり</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>室内異臭あり</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>室内雨水汚れ</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>室内ペットの毛あり</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>室内ガラス飛散あり</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>シートカバーあり</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>右リアシートベルト×</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>左リアシートベルト×</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>