force-app/main/default/objects/AccountAssessment__c/fields/tokki_oil__c.field-meta.xml
<CustomField>
    <fullName>tokki_oil__c</fullName>
    <label>特記事項（オイル）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>33</fullName>
                <label>エンジンオイルパン割れ</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>エンジンオイル漏れ</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>ミッションオイル漏れ</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>ミッションオイルパン割れ</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>オイル乳化あり</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>